experiments/wva-inference-sim/10-inference-sim/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: experiment-02
  labels:
    openshift.io/user-monitoring: "true"
