experiments/wva-inference-sim/10-inference-sim/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-sim-scheduling
  namespace: experiment-02
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-ai-inference
    namespace: openshift-ingress
  rules:
    - backendRefs:
      - group: inference.networking.k8s.io
        kind: InferencePool
        name: inference-sim-scheduling
        port: 8000
        weight: 1
      timeouts:
        backendRequest: 0s
        request: 0s
      matches:
      - path:
          type: PathPrefix
          value: /
